--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang='en'>
   <head>
+    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/pure-min.css" integrity="sha384-oAOxQR6DkCoMliIh8yFnu25d7Eq/PHS21PClpwjOTeU2jRSq11vu66rf90/cZr47" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css"/>
     <meta charset='UTF-8'/>
     <meta name='viewport'
@@ -8,6 +9,17 @@
       initial-scale=1.0, maximum-scale=1.0' />
   </head>
   <body>
-    Hello
+    <form class="pure-form>" <fieldset>
+      <legend>Enter a list of ingredients that you would like to include in your recipe. Seperate ingredients by a comma but no spaces (eggs,milk,sugar).</legend>
+      <input placeholder="ingredients" id="ingredients">
+      <br>
+      <p></p>
+      <button id="woo" class="pure-button pure-button-primary">Woo!</button>
+      </fieldset>
+    </form>
+    <p id="result"></p>
+
+    <script text="type/javascript" src="/script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js" integrity="sha256-4iQZ6BVL4qNKlQ27TExEhBN1HFPvAvAMbFavKKosSWQ=" crossorigin="anonymous"></script>
   </body>
 </html>
