--- a/index.html
+++ b/index.html
@@ -24,8 +24,20 @@
       <div class="output-box">
         <p id="result"></p>
       </div>
+      <div class="input-box2">
+        <form class="pure-form">
+          <legend>Generate a meal plan for a day! Type in the number of calories you want for the day.</legend>
+          <input placeholder="number of calories" id="calories">
+          <br>
+          <p></p>
+          <button id="woo2" class="pure-button pure-button-primary">Generate Meal Plan</button>
+        </form>
+      </div>
+      <div class="output-box2">
+        <p id="result2"></p>
+      </div>
     </div>
-    <div class="footer">Hello
+    <div class="footer"><a href="https://github.com/joshuamoore5899/project2">Github Link</a>
     </div>
 
     <script text="type/javascript" src="/script.js"></script>
