--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
       <div class="input-box2">
         <form class="pure-form">
-          <legend>Generate a meal plan for a day! Type in the number of calories you want for the day.</legend>
+          <legend>Generate a meal plan for a day! Type in the number of calories you want for the day. Your entry must be a number! (ex: 1800)</legend>
           <input placeholder="number of calories" id="calories">
           <br>
           <p></p>
